--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
         "xstring": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "utility": "cpp",
+        "xtree": "cpp"
     },
     "python.pythonPath": "C:\\Users\\RISHABH KUMAR\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
